--- a/app/src/main/res/layout/activity_book_now.xml
+++ b/app/src/main/res/layout/activity_book_now.xml
@@ -24,7 +24,10 @@
         android:layout_width="1dp"
         android:layout_height="715dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:background="#090808"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
@@ -207,7 +210,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Cntact No:"
+        android:text="Contact No:"
         android:textAlignment="center"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
