--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -288,7 +288,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/cntact_no"
+        android:text="Contact No:"
         android:textAlignment="center"
         android:textColor="#0C0C0C"
         android:textSize="18sp"
