--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -100,7 +100,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="#FF9800"
-            android:text="@string/book_now"
+            android:text="Rates"
             app:layout_constraintBottom_toTopOf="@+id/bookNowBtn6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
