change the names of the functions

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/back1"
-        tools:context=".MainActivity">
+        tools:context=".makereservation1">
 
         <Button
             android:id="@+id/bookNowBtn"
