--- a/app/src/main/res/layout/checkavailability1.xml
+++ b/app/src/main/res/layout/checkavailability1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/aa"
-    tools:context=".Room">
+    tools:context=".checkavailability1">
 
     <TextView
         android:id="@+id/textView"
