--- a/app/src/main/res/layout/contactus2.xml
+++ b/app/src/main/res/layout/contactus2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/two22"
-    tools:context=".UpdateDelete">
+    tools:context=".contactus2">
 
 
     <EditText
