--- a/app/src/main/res/layout/makereservation2.xml
+++ b/app/src/main/res/layout/makereservation2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/images2"
-    tools:context=".BookNow">
+    tools:context=".makereservation2">
 
     <View
         android:id="@+id/divider7"
