--- a/app/src/main/res/layout/makereservation3.xml
+++ b/app/src/main/res/layout/makereservation3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/images2"
-    tools:context=".Finish">
+    tools:context=".makereservation3">
 
     <TextView
         android:id="@+id/textView26"
