--- a/app/src/main/res/layout/makeresrvation1.xml
+++ b/app/src/main/res/layout/makeresrvation1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/images2"
-    tools:context=".MainActivity">
+    tools:context=".makereservation1">
 
     <ImageView
         android:id="@+id/imageView"
