--- a/app/src/main/res/layout/makereservation3.xml
+++ b/app/src/main/res/layout/makereservation3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/images2"
+    android:background="@android:color/background_light"
     tools:context=".makereservation3">
 
     <TextView
@@ -30,18 +30,18 @@
         android:id="@+id/SUBMIT2"
         android:layout_width="154dp"
         android:layout_height="53dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
-        android:background="#FF9800"
+        android:background="@android:color/holo_blue_dark"
         android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.935"
+        app:layout_constraintStart_toEndOf="@+id/SUBMIT3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.971" />
+        app:layout_constraintVertical_bias="0.966" />
 
     <Button
         android:id="@+id/SUBMIT3"
@@ -51,7 +51,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
-        android:background="#FF9800"
+        android:background="@android:color/holo_blue_dark"
         android:text="@string/update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -326,7 +326,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#FFEB3B"
+        android:background="@android:color/holo_blue_dark"
         android:text="@string/book_now"
         android:textAlignment="center"
         android:textColor="#0C0B0B"
@@ -362,7 +362,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#FF9800"
+        android:background="@android:color/holo_blue_dark"
         android:text="@string/paradise_hotel"
         android:textColor="#0A0A0A"
         android:textSize="24sp"
