--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#C590A3</color>
+
+
+    <color name="Darkblue">#1B1063</color>
+    <color name="white">#F5F9F9</color>
+    <color name="light_gray">#E8EBEC</color>
+    <color name="purpel">#BC1FF9</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorTransParentwhite">#CCCCCC</color>
 </resources>
