--- a/app/src/main/res/layout/activity_paymentnew.xml
+++ b/app/src/main/res/layout/activity_paymentnew.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundhome"
-    tools:context=".payment1">
+    tools:context=".paymentnew">
 
     <TextView
         android:layout_width="162dp"
@@ -95,4 +95,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.988" />
 
-</androidx.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
