--- a/app/src/main/res/layout/contactus2.xml
+++ b/app/src/main/res/layout/contactus2.xml
@@ -145,33 +145,33 @@
 
     <EditText
         android:id="@+id/txt"
-        android:layout_width="131dp"
-        android:layout_height="23dp"
+        android:layout_width="168dp"
+        android:layout_height="62dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#0C0C0C"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.162" />
+        app:layout_constraintVertical_bias="0.109" />
 
     <Button
         android:id="@+id/button14"
-        android:layout_width="141dp"
-        android:layout_height="45dp"
+        android:layout_width="127dp"
+        android:layout_height="43dp"
         android:background="@drawable/button"
         android:text="View"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.985"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.135" />
+        app:layout_constraintVertical_bias="0.122" />
 
     <TextView
         android:id="@+id/textView14"
@@ -182,9 +182,16 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintHorizontal_bias="0.097"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.161" />
+        app:layout_constraintVertical_bias="0.144" />
+
+    <LinearLayout
+        android:layout_width="413dp"
+        android:layout_height="437dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteY="161dp"></LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
