--- a/app/src/main/res/layout/activity_payment3.xml
+++ b/app/src/main/res/layout/activity_payment3.xml
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.988" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/ci"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -59,7 +59,7 @@
         android:autofillHints="" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/co"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/ch"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -95,7 +95,7 @@
         app:layout_constraintVertical_bias="0.09" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/ad"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
